--- a/src/componenti/navbar/navbar.scss
+++ b/src/componenti/navbar/navbar.scss
@@ -6,10 +6,11 @@
     font-weight: 400;
 }
 
+
 .navbar--link{
 
     font-family: $intestazioni;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 600;
     color: $quaternaryC;
     transition: color 0.3s ease-in-out;
@@ -17,6 +18,6 @@
 
 .navbar--link:hover{
     transform: scale(1.25);
-    color: #ecc94bd6;
+    color: #11141C;
 
 }
